improved the   header and footer

--- a/src/app/component/footer/footer.html
+++ b/src/app/component/footer/footer.html
@@ -3,14 +3,13 @@
 
     <!-- LEFT -->
     <p>
-      © {{ currentYear }} <span>Your Name</span>. All rights reserved.
+      © {{ currentYear }} <span>{{logoName}}</span>. All rights reserved.
     </p>
 
     <!-- RIGHT -->
     <div class="socials">
-      <a href="https://github.com/yourusername" target="_blank">GitHub</a>
-      <a href="https://linkedin.com/in/yourusername" target="_blank">LinkedIn</a>
-      <a href="mailto:your@email.com">Email</a>
+      <a href={{bio.github}} target="_blank">GitHub</a>
+      <a href={{bio.linkedin}} target="_blank">LinkedIn</a>
     </div>
 
   </div>
