--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,21 @@
-<app-background></app-background>
+<div class="app-container">
 
-<app-navbar></app-navbar>
+  <!-- Fixed Background -->
+  <app-background></app-background>
 
-<router-outlet></router-outlet>
+  <!-- Fixed Header -->
+  <header class="app-header">
+    <app-navbar></app-navbar>
+  </header>
 
-<app-footer></app-footer>
+  <!-- Scrollable Content -->
+  <main class="app-main">
+    <router-outlet></router-outlet>
+  </main>
+
+  <!-- Fixed Footer -->
+  <footer class="app-footer">
+    <app-footer></app-footer>
+  </footer>
+
+</div>
