--- a/src/app/component/footer/footer.html
+++ b/src/app/component/footer/footer.html
@@ -1,16 +1,3 @@
-<footer class="footer">
-  <div class="container">
-
-    <!-- LEFT -->
-    <p>
-      © {{ currentYear }} <span>{{logoName}}</span>. All rights reserved.
-    </p>
-
-    <!-- RIGHT -->
-    <div class="socials">
-      <a href={{bio.github}} target="_blank">GitHub</a>
-      <a href={{bio.linkedin}} target="_blank">LinkedIn</a>
-    </div>
-
-  </div>
+<footer class="bg-slate-900 py-6 text-center text-gray-400 border-t border-slate-700">
+<p>© 2025 {{ logoName }}. All rights reserved.</p>
 </footer>
