--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,7 @@
 <div class="app-container">
 
   <!-- Fixed Background -->
-  <!--<app-background></app-background>-->
+  <app-background></app-background>
 
   <!-- Fixed Header -->
   <header class="app-header">
